--- a/dev-server-public/clickfunnels-dev.html
+++ b/dev-server-public/clickfunnels-dev.html
@@ -86,6 +86,7 @@
     <form id="clickfunnels-form" action="#" method="POST">
       <input type="text" name="email" placeholder="Email" />
       <input type="text" name="name" placeholder="Name" />
+      <input type="text" name="phone" placeholder="Phone" />
       <input type="submit" value="Submit" />
     </form>
 
