Show OneTrust banner on our test pages

--- a/dev-server-public/webflow-dev.html
+++ b/dev-server-public/webflow-dev.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Webflow Dev Test</title>
+    <!-- OneTrust Cookies Consent Notice start for xip.co -->
+    <script src="https://cdn.cookielaw.org/scripttemplates/otSDKStub.js"  type="text/javascript" charset="UTF-8" data-domain-script="8da791dd-1e6d-4a5a-8a13-2868ee4e92e0-test" ></script>
+    <script type="text/javascript">
+      function OptanonWrapper() {}
+    </script>
+    <!-- OneTrust Cookies Consent Notice end for xip.co -->
     <script src="http://localhost:9000/webflow.js"></script>
     <style>
       /* Base styles courtesy of GPT4 */
